syntax = "proto3";

package document;

option go_package = "documentpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.document";

import "google/api/annotations.proto";
import "precise-proofs/proofs/proto/proof.proto";
import "protoc-gen-swagger/options/annotations.proto";

// DocumentService contains all common interactions for documents
service DocumentService {
  rpc CreateDocumentProof(CreateDocumentProofRequest) returns (DocumentProof) {
    option (google.api.http) = {
      post: "/document/{identifier}/proof"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates a list of precise proofs for the specified fields of the document given by ID"
    };
  }
  rpc CreateDocumentProofForVersion(CreateDocumentProofForVersionRequest) returns (DocumentProof) {
    option (google.api.http) = {
      post: "/document/{identifier}/{version}/proof"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates a list of precise proofs for the specified fields of the given version of the document given by ID"
    };
  }
}

message CreateDocumentProofRequest {
  string identifier = 1;
  string type = 2;
  repeated string fields = 3;
}

// ResponseHeader contains a set of common fields for most documents
message ResponseHeader {
  string document_id = 1;
  string version_id = 2;
  string state = 3;
}

message DocumentProof {
  ResponseHeader header = 1;
  repeated proofs.Proof field_proofs = 2;
}

message CreateDocumentProofForVersionRequest {
  string identifier = 1;
  string type = 2;
  string version = 3;
  repeated string fields = 4;
}
